feat: added archives such as JS and SASS/CSS and did basics for body html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 </head>
 <body>
     
+    <section id="weather-div">
+        <form>
+            <input type="text" name="weather" id="weather" placeholder="Insira a cidade aqui">
+            <button>Enviar</button>
+        </form>
+        <h1 id="city-name">Cidade - País</h1>
+        <p id="temp">10ºC</p>
+        <p id="humidity">10%</p>
+    </section>
+
 </body>
 </html>
