feat: added hour html and styles to almost everything

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="js/main.js" defer></script>
 </head>
 <body>
+
+    <div id="timer">
+        <p>10:20:30</p>
+    </div>
+
+    <img src="assets/weather-logo.png" alt="Logo de Weather" id="logo" draggable="false">
     
     <section id="weather-div">
         <form>
@@ -15,8 +21,8 @@
             <button>Enviar</button>
         </form>
         <h1 id="city-name">Cidade - País</h1>
-        <p id="temp">10ºC</p>
-        <p id="humidity">10%</p>
+        <p id="temp">Temperatura: 10ºC</p>
+        <p id="humidity">Umidade: 10%</p>
     </section>
 
 </body>
