feat: added js to timer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <div id="timer">
-        <p>10:20:30</p>
+    <div id="timer-div">
+        <p id="timer">10:20:30</p>
     </div>
 
     <img src="assets/weather-logo.png" alt="Logo de Weather" id="logo" draggable="false">
