finished hour js

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <img src="assets/weather-logo.png" alt="Logo de Weather" id="logo" draggable="false">
     
     <section id="weather-div">
-        <form>
+        <form id="forms">
             <input type="text" name="weather" id="weather" placeholder="Insira a cidade aqui">
             <button>Enviar</button>
         </form>
-        <h1 id="city-name">Cidade - País</h1>
-        <p id="temp">Temperatura: 10ºC</p>
-        <p id="humidity">Umidade: 10%</p>
+        <h1 id="city-name"></h1>
+        <p id="temp"></p>
+        <p id="humidity"></p>
     </section>
 
 </body>
